Limit jank region granularity.

This patch snaps jank regions to a grid whose cells are 1/60th of the
min(width, height) of the viewport.  This greatly reduces performance
overhead of JankTracker's calls to Region::Unite.

Jank tracking is still not entirely free:
https://i.imgur.com/UpizpGe.png

However the remaining cost is due primarily to coordinate mapping and
not combining regions; crbug.com/842282 might help here.

Bug: 847252
Change-Id: I86f202b8ab3a7be609c668ab0285e06745b41e10
Reviewed-on: https://chromium-review.googlesource.com/1075520
Commit-Queue: Steve Kobes <skobes@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562327}
Former-commit-id: 7ec934dfd98984fac8af897b3f29c0514a3ff159